fix birthday type in user dao from text to timestamp