@@ -2,7 +2,7 @@ package com.puluo.util;
 
 import java.security.MessageDigest;
 
-import javax.xml.bind.DatatypeConverter;
+import org.apache.commons.codec.binary.Base64;
 
 public class Encrypt {
 	public static String sha256(String text){
@@ -11,7 +11,7 @@ public class Encrypt {
 			md = MessageDigest.getInstance("SHA-256");
 			md.update(text.getBytes("UTF-8"));
 			byte[] digest = md.digest();
-			return DatatypeConverter.printHexBinary(digest);
+			return Base64.encodeBase64String(digest);
 			//return new String(digest,"UTF-8");
 		} catch (Exception e) {
 			e.printStackTrace();
